# multi-tenant-lms-api

./: .gitignore  README.md  example.env  package.json  structure.sql  tsconfig.json
__tests__/: sum.test.ts
assets/templates/: success-registration.hbs  verify-email.hbs
scripts/: build.py
src/: index.ts
src/api/: index.ts
src/api/controllers/: auth.controller.ts
src/api/routes/: auth.router.ts  user.router.ts
src/api/v1/: index.ts
src/api/v1/controllers/: auth.controller.ts  user.controller.ts
src/api/v1/routes/: auth.router.ts  user.router.ts
src/api/v1/validators/: auth.validator.ts
src/api/validators/: auth.validator.ts
src/config/: constants.ts  database.ts  mailer.ts
src/features/: index.ts
src/features/commerce/: index.ts
src/features/commerce/controllers/: payment-intent.controller.ts  payment-method.controller.ts  payment.controller.ts
src/features/commerce/repositories/: payment-intent.ts  payment.ts
src/features/commerce/routes/: payment-intent.route.ts  payment-method.route.ts
src/features/course/: index.ts
src/features/course/controllers/: course-material.controller.ts
src/features/tenant/: index.ts
src/features/user/: index.ts
src/middlewares/: auth.ts  authorization.ts  errorhandler.ts
src/repo/: api-key.repo.ts  user-repo.ts  user.repo.ts
src/services/: index.ts
src/shared/lib/doc_parser/: Cargo.toml  README.md  index.node.d.ts  index.ts  package.json
src/shared/lib/doc_parser/src/: lib.rs
src/shared/middlewares/: errorhandler.ts
src/shared/utils/: crudrepo.ts
src/utils/: crudrepo.ts
(+13 files in other folders)
