[package]
name = "doc_parser"
version = "0.1.0"
description = "Document and report parser"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.9.0"
csv = "1.3.1"
neon = "1"
neon-serde = "0.4.0"
serde = "1.0.217"
serde_json = "1.0.138"
shiva = { version = "1.4.9", features = ["csv", "xls", "xlsx", "pdf", "docx"] }
